Closed Bug 547811 Opened 14 years ago Closed 14 years ago

ASSERTION: Children are stored but not initialized!: 'mAreChildrenInitialized', file c:/mozilla/fx20-02/accessible/src/base/nsAccessible.cpp, line 3011

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: surkov, Assigned: surkov)

References

(Blocks 1 open bug)

Details

(Keywords: access)

Attachments

(1 file)

When I open DOMi then I get an assertion:

ASSERTION: Children are stored but not initialized!: 'mAreChildrenInitialized', file c:/mozilla/fx20-02/accessible/src/base/nsAccessible.cpp, line 3011
I'm seeing this in various parts of the UI at different times. Since a11y is enabled on multi-touch systems this makes using a debug build a major pita. Also, this error wasn't happening all that long ago... what checkin regressed this?
The logic has been changed in bug 342045.
Blocks: 342045
Attached patch patchSplinter Review
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Attachment #430275 - Flags: review?(bolterbugz)
Comment on attachment 430275 [details] [diff] [review]
patch

r=me.
Attachment #430275 - Flags: review?(bolterbugz) → review+
landed on 1.9.3 - http://hg.mozilla.org/mozilla-central/rev/7a92d873a4ae
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: