 Bug 547811 -  ASSERTION: Children are stored but not initialized! 'mAreChildrenInitialized', file c:/mozilla/fx20-02/accessible/src/base/nsAccessible.cpp, line 3011, r=davidb